--- a/assignments/1. counter/index.html
+++ b/assignments/1. counter/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Basic Counter App</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400&display=swap" rel="stylesheet">
   </head>
-  <body></body>
+  <body>
+    <section class="hero wrapper">
+      <h1 class="heading">Counter</h1>
+      <div class="data"></div>
+      <div class="counter">
+        <button class="increment">Increment</button>
+        <button class="decrement">Decrement</button>
+        <button class="reset">Reset</button>
+      </div>
+    </section>
+    <script src="main.js"></script>
+  </body>
 </html>
