--- a/assignments/3. todo/todo/index.html
+++ b/assignments/3. todo/todo/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="./style.css"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Todo</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="hero wrapper">
+      <h1 class="heading">todos</h1>
+      <input type="text" class = "todo" placeholder="Whats need to be done?">
+      <ul class="list float">
+      </ul>
+      <footer>
+        <h3>Double-click to edit a todo</h3>
+        <h3>Created by petehunt</h3>
+        <h3>Part of TodoMVC</h3>
+      </footer>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
