--- a/assignments/3. todo/todo/index.html
+++ b/assignments/3. todo/todo/index.html
@@ -13,6 +13,18 @@
       <input type="text" class = "todo" placeholder="Whats need to be done?">
       <ul class="list float">
       </ul>
+      <div class="foot">
+            <div class="footer1">
+                <span class="item_count"> 0 </span><span class="item">item's left</span></span>
+                <span class="all">All</span>
+                <span class="active">Active</span>
+                <span class="completed">Completed</span>
+                <span class="clear_completed">Clear completed</span>
+            </div>
+            <div class="footer1"></div>
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+         </div>
       <footer>
         <h3>Double-click to edit a todo</h3>
         <h3>Created by petehunt</h3>
